Update specs
